force-app/main/default/objects/TDF_Config__mdt/TDF_Config__mdt.object-meta.xml
<CustomObject>
    <label>TDF Config</label>
    <pluralLabel>TDF Config</pluralLabel>
</CustomObject>