force-app/main/default/objects/TDF_Config__mdt/fields/Auto_Apply_Required_Defaults__c.field-meta.xml
<CustomField>
    <fullName>Auto_Apply_Required_Defaults__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Auto Apply Required Defaults</label>
    <type>Checkbox</type>
</CustomField>