force-app/main/default/objects/TDF_Config__mdt/fields/Auto_Fill_ExtKey__c.field-meta.xml
<CustomField>
    <fullName>Auto_Fill_ExtKey__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Auto Fill ExtKey</label>
    <type>Checkbox</type>
</CustomField>