force-app/main/default/objects/TDF_Config__mdt/fields/Auto_Fill_Name__c.field-meta.xml
<CustomField>
    <fullName>Auto_Fill_Name__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Auto Fill Name</label>
    <type>Checkbox</type>
</CustomField>