force-app/main/default/objects/TDF_Config__mdt/fields/Default_Insert_Mode__c.field-meta.xml
<CustomField>
    <fullName>Default_Insert_Mode__c</fullName>
    <label>Default Insert Mode</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>ALL_OR_NONE</fullName>
                <default>true</default>
                <label>ALL_OR_NONE</label>
            </value>
            <value>
                <fullName>PARTIAL_SUCCESS</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>