force-app/main/default/objects/TDF_Config__mdt/fields/Default_Name_Prefix__c.field-meta.xml
<CustomField>
    <fullName>Default_Name_Prefix__c</fullName>
    <label>Default Name Prefix</label>
    <length>80</length>
    <type>Text</type>
</CustomField>