force-app/main/default/objects/TDF_Config__mdt/fields/Enable_Debug_Logging__c.field-meta.xml
<CustomField>
    <fullName>Enable_Debug_Logging__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Enable Debug Logging</label>
    <type>Checkbox</type>
</CustomField>