force-app/main/default/objects/TDF_Config__mdt/fields/Fail_On_Missing_Builder__c.field-meta.xml
<CustomField>
    <fullName>Fail_On_Missing_Builder__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Fail On Missing Builder</label>
    <type>Checkbox</type>
</CustomField>