force-app/main/default/objects/TDF_Config__mdt/fields/Fail_On_Unknown_Object_Config__c.field-meta.xml
<CustomField>
    <fullName>Fail_On_Unknown_Object_Config__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Fail On Unknown Object Config</label>
    <type>Checkbox</type>
</CustomField>