force-app/main/default/objects/TDF_Config__mdt/fields/Store_SaveResult_Details__c.field-meta.xml
<CustomField>
    <fullName>Store_SaveResult_Details__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Store SaveResult Details</label>
    <type>Checkbox</type>
</CustomField>