force-app/main/default/objects/TDF_Config__mdt/fields/Strict_Mode__c.field-meta.xml
<CustomField>
    <fullName>Strict_Mode__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Strict Mode</label>
    <type>Checkbox</type>
</CustomField>