force-app/main/default/objects/TDF_Config__mdt/fields/Unique_Strategy__c.field-meta.xml
<CustomField>
    <fullName>Unique_Strategy__c</fullName>
    <label>Unique Strategy</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>TIMESTAMP_SEQ</fullName>
                <default>true</default>
                <label>TIMESTAMP_SEQ</label>
            </value>
            <value>
                <fullName>RANDOM_SEQ</fullName>
            </value>
            <value>
                <fullName>TESTRUN_SEQ</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>